# rust-web-boilerplate

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
config/: default.toml
docs/: health.md  sqlx-cli.md
docs/api/: auth.md  health.md  post.md  profile.md  user.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/about/: about.js  index.html
frontend/home/: home.js  index.html
frontend/src/: App.vue  about.js  base.js  index.js  login.js  main.js  register.js
frontend/src/api/: auth.js  request.js
migrations/: 20241010115927_users.down.sql  20241010115927_users.up.sql  20241022080337_posts.down.sql  20241022080337_posts.up.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  pagination.rs  template.rs
src/api/: error.rs  jwt.rs  mod.rs  pagination.rs  route.rs  routes.rs
src/health/: handler.rs  mod.rs  routes.rs  service.rs
src/index/: handler.rs
src/middleware/: cors.rs  error.rs  error_handlers.rs  mod.rs  session.rs
src/server/: mod.rs
src/user/: dto.rs  handler.rs  model.rs  service.rs
src/web/: error.rs  errors.rs  manifest.rs  mod.rs  pagination.rs  route.rs  routes.rs  template.rs  vite.rs
static/css/: main.css
templates/: 403.html  404.html  500.html
templates/about/: index.html
templates/auth/: login.html  register.html
templates/error/: 400.html  401.html  402.html  404.html  429.html  503.html  error.html
templates/index/: index.html
templates/layout/: 404.html  base.html
templates/partials/: footer.html  navbar.html
templates/post/: create.html  detail.html  edit.html  index.html
(+103 files in other folders)
