[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.11.5"
derive_more = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.12.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql"] }
redis = { version = "0.27.4", features = ["tokio-comp"] }
